# SimpleChat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
client/: CMakeLists.txt
include/: chat_client.h  chat_server.h  client_controller.h  client_model.h  client_view.h  client_view_interface.h  const.h
main/: CMakeLists.txt  client.cpp  server.cpp
main/chat/client/: CMakeLists.txt
main/chat/client/include/: client_view.h
main/chat/client/src/: client.cpp  client_view.cpp
main/echo/: CMakeLists.txt  multiple_server.cpp  single_client.cpp  single_server.cpp
server/: CMakeLists.txt
src/: chat_client.cpp  chat_server.cpp  chat_server.h  client_controller.cpp  client_model.cpp  client_model.h  client_view.cpp
